<resources>
    <string name="app_name">Do not cook</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicGdyZWxhIiwiYSI6ImNrZzNlODVkdTA5NTIycWw2czBtNzBtMmYifQ.mWk9ZfSIsK4qN2gAkA4tCA</string>
    <string name="countries">Countries</string>
    <string name="title_activity_maps">Map</string>
    <string name="restaurants">Restaurants</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menú</string>
    <string name="search">Search</string>
    <string name="permission_explanation">We need to access your location to calculate the distance between you and the restaurants. Also we\'ll use it to filter the results in a radio.</string>
    <string name="continue_text">Continue</string>
    <string name="home">Home</string>
    <string name="favs">Favs</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="add_restaurant">Add restaurant</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="restaurant_address">Address</string>
    <string name="restaurant_phone">Phone number</string>
    <string name="add_restaurant_instruction">Are you already in Google? then search your restaurant name and we\'ll fill the needed data for you!</string>
    <string name="not_google">No, I\'m not in Google</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="manage_restaurants">Manage restaurants</string>
    <string name="logo">Logo</string>
    <string name="header">Header</string>
    <string name="restaurant_coords">Coordinates</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="activated">Activated</string>
    <string name="edit_menu">Edit menus</string>
    <string name="create_restaurant">Create</string>
    <string name="register">Register</string>
    <string name="price">Price</string>
    <string name="menu_name">Menu name</string>
    <string name="date">Date</string>
    <string name="included">Includes</string>
    <string name="bread">Bread</string>
    <string name="drink">Drink</string>
    <string name="dessert">Dessert</string>
    <string name="coffee">Coffee</string>
    <string name="coffee_or_dessert">Dessert or coffee</string>
    <string name="add_menu">Add menu</string>
    <string name="select_date">Menus</string>
</resources>